--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="form.php" method="post">
+    <form action="https://github.com/dhruviktank/hello.github.io/blob/e7975fc9821216d3f3e7b9f010e23034989d56f4/form.php" method="post">
         <label for="name">Name</label>
         <input type="text" name="name" placeholder="Enter name"><br>
         <label for="email">Email</label>
