--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@ setcookie("user","Dhruvik",time()*(86400*30),"/");
 </head>
 <body>
     <form action="https://github.com/dhruviktank/hello.github.io/blob/459f4e4dd3432c6beee4e6bdf53407220735287b/form.php" method="post">
-        
+        <?php
+        if(!isset($_COOKIE["user"])){
+echo "cookie is not set";
+else{
+echo "cookie is set";
+echo $_COOKIE["user"];
+}
+?>
         <label for="name">Name</label>
         <input type="text" name="name" placeholder="Enter name"><br>
         <label for="email">Email</label>
